tests/NormalTests/paczka1/small_fuzzy/83736850.err
Error in line 3: uDPdfM S34 41,1
Error in line 5: uDPdfM A148 20,7
Error in line 7: aJZTqf S146 79,16
Error in line 8: A148 A804 83,6
Error in line 2: IPMwfVLJ S34 64,6
Error in line 10: aJZTqf S146 299,3
